<resources>
    <string name="app_name">TaDO</string>
    <string name="title_activity_create_list">CreateListActivity</string>
    <string name="activity_create_list">New List</string>


    <string name="action_settings">Settings</string>
    <string name="nav_home">My Lists</string>
    <string name="nav_ran_lists">TaDO Chooser</string>
    <string name="nav_sync">Sync with Google Drive</string>
    <string name="nav_scheduler">Scheduler</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- fragment_home & HomeFragment Strings -->
    <string name="home_fragment_create_lists_tv">TaDO LISTS</string>
    <string name="fragment_home_tado_titles">TaDO TITLES</string>
    <string name="fragment_home_pick_title">CHOOSE A LIST</string>
    <string name="fragment_home_tado_items">TaDO</string>
    <string name="fragment_home_remove_list">REMOVE LIST</string>
    <string name="fragment_home_items">Items</string>
    <string name="recycler_item_duration">DURATION</string>
    <string name="recycler_view_hours">h</string>
    <string name="recycler_view_mins">m</string>

    <!-- dialog strings -->
    <string name="dialog_remove_list">Confirm List Deletion</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_message">Note: This cannot be undone</string>

    <!-- create items activity -->
    <string name="create_list_title">TITLE</string>
    <string name="create_list_save_button">SAVE TITLE</string>
    <string name="create_list_edit_button">EDIT</string>
    <string name="create_list_item">ITEM</string>
    <string name="create_list_duration">DURATION (HH:MM)</string>
    <string name="create_list_time">00</string>
    <string name="create_item_add_item">ADD ITEM</string>
    <string name="create_list_time_separator">:</string>
    <string name="create_list_swipe_left">SWIPE LEFT = DELETE</string>
    <string name="create_list_swipe_right">SWIPE RIGHT = TOGGLE COMPLETE ITEMS</string>
    <string name="create_list_splah_button">GOT IT</string>
    <string name="create_list_tasks_to_complete">Tasks</string>
    <string name="create_item_recycler_view_completed_tasks">Completed tasks</string>

    <!-- create items menu -->
    <string name="create_menu_edit_title">Edit Title Name</string>

    <!-- splash screen -->
    <string name="splash_screen_message">CLICK ON THE PLUS TO START CREATING SOME LISTS</string>
    <string name="splash_screen_button">GOT IT</string>
    <string name="create_list_dialog_ok_button">OK</string>


    <!-- MyListsFragment Dialog - create new list -->
    <string name="fragment_my_lists_dialog_add_a_list">Create a new list</string>
    <string name="fragment_my_lists_dialog_title">Title</string>
    <string name="fragment_my_lists_dialog_cancel">CANCEL</string>
    <string name="fragment_my_lists_dialog_done">DONE</string>

    <!-- CreateItemsActivity Dialog - rename title -->
    <string name="activity_create_items_dialog_title">Rename title</string>

    <!-- CreateItemsActivity Dialog - add item -->
    <string name="activity_create_items_dialog_add_item">Add a task</string>
    <string name="activity_create_items_dialog_edit_item">Edit task</string>
    <string name="activity_create_items_dialog_add_details">Details</string>
    <string name="activity_create_items_dialog_item_info">Priority &amp; Estimated time</string>
    <string name="activity_create_items_dialog_item_next">NEXT</string>
    <string name="activity_create_items_dialog_item_previous">PREVIOUS</string>
    <string name="activity_create_items_dialog_item_hours">Hours</string>
    <string name="activity_create_items_dialog_item_minutes">Minutes</string>
    <string name="activity_create_items_dialog_item_low">Low</string>
    <string name="activity_create_items_dialog_item_medium">Med</string>
    <string name="activity_create_items_dialog_item_high">High</string>

    <!-- Sync Fragment -->
    <string name="sync_fragment_radio_button_upload">Upload to Drive</string>
    <string name="sync_fragment_radio_button_download">Download from Drive</string>
    <string name="sync_fragment_radio_button_delete">Delete Drive file</string>
    <string name="sync_fragment_sync_button">SYNC</string>


    <!-- MyListsFragment menu -->
    <string name="fragment_my_list_menu_search">Search</string>


    <!-- Chooser Fragment -->
    <string-array name="chooser_framgent_tab_title_array">
        <item>QUEUED TASKS</item>
        <item>CURRENT TASK</item>
    </string-array>
    <string name="tado_chooser_fragment_1_list">List</string>
    <string name="tado_chooser_framgent_1_list_text_view">List Holder Text</string>
    <string name="tado_chooser_fragment_1_task">Task</string>
    <string name="tado_chooser_framgent_1_item_text_view">Item Holder Text</string>
    <string name="tado_chooser_fragment_1_options">Options</string>
    <string name="tado_chooser_fragment_1_checkbox">Notify on time up</string>
    <string name="tado_chooser_fragment_1_remove">Remove item</string>
    <string name="tado_chooser_fragment_1_done_radio_button">Mark as done</string>
    <string name="tado_chooser_fragment_1_delete_radio_button">Delete on time up</string>
    <string name="tado_chooser_fragment_1_do_not_alter_radio_button">Do not alter</string>
    <string name="tado_chooser_fragment_1_start_button">START</string>
    <string name="tado_chooser_fragment_1_pause_button">PAUSE</string>
    <string name="tado_chooser_fragment_1_remove_button">RESET</string>


    <!-- Chooser Fragment 1 Dialog -->
    <string name="tado_chooser_fragment_1_dialog_choose_list">Lists</string>
    <string name="tado_chooser_fragment_1_dialog_choose_task_2">Tasks</string>
    <string name="tado_chooser_fragment_1_dialog_choose_task">Choose a task</string>
    <string name="tado_chooser_fragment_1_dialog_queue">QUEUE</string>
    <string name="tado_chooser_fragment_1_dialog_done">DONE</string>
    <string name="tado_chooser_fragment_1_dialog_choose">CHOOSE</string>
    <string name="tado_chooser_fragment_1_dialog_toast_1">Task already in chosen or in queue</string>
    <string name="tado_chooser_fragment_1_dialog_toast_2">Please choose a task</string>


    <!-- Chooser Fragment Context Menu (recycler view) -->
    <string name="tado_chooser_fragment_context_menu_set_as_current">Set as current task</string>
    <string name="tado_chooser_fragment_context_menu_set_as_remove">Remove from queue</string>

    <!-- Chooser Fragment Timer Menu -->
    <string name="tado_chooser_fragment_timer_menu_header">Timer Options</string>
    <string name="tado_chooser_fragment_timer_menu_reset">Reset timer</string>






</resources>
