<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.treefrogapps.TaDo.CreateItemsActivity">

    <item
        android:id="@+id/createListEditTitle"
        android:title="@string/create_menu_edit_title"
        android:orderInCategory="1"
        android:icon="@mipmap/ic_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/createListEditSearch"
        android:title="@string/fragment_my_list_menu_search"
        android:orderInCategory="2"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
