<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.treefrogapps.TaDo.HomeFragment"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/primaryColorAccent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/home_fragment_create_lists_tv"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_home_tado_titles"
            android:textColor="@color/brown_text_normal"
            android:textSize="@dimen/text_16sp"/>

        <Spinner
            android:id="@+id/homeFragmentTitlesSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_dots_menu"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_home_tado_items"
            android:textColor="@color/brown_text_normal"
            android:textSize="@dimen/text_16sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/homeFragmentRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.treefrogapps.TaDo.HomeFragment"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/homeFragmentRemoveListButton"
            android:text="@string/fragment_home_remove_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"/>

    </LinearLayout>


</LinearLayout>
