<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/primaryColor"
        android:gravity="center_vertical|start"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twenty_four"
            android:text="@string/tado_chooser_fragment_1_dialog_choose_task"
            android:textColor="@color/white"
            android:textSize="@dimen/text_20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/taDOChooserDialogListSpinner"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_dots_menu"/>

        <Spinner
            android:id="@+id/taDOChooserDialogItemSpinner"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_dots_menu"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/white"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/taDOChooserDialogQueueButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dp"
            android:layout_marginLeft="@dimen/twenty_four"
            android:layout_marginRight="@dimen/four_dp"
            android:background="@drawable/button_selector"
            android:text="@string/tado_chooser_fragment_1_dialog_queue"
            android:textColor="@color/primaryColor"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/taDOChooserDialogPositiveButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dp"
            android:layout_marginLeft="@dimen/four_dp"
            android:layout_marginRight="@dimen/four_dp"
            android:background="@drawable/button_selector"
            android:text="@string/tado_chooser_fragment_1_dialog_choose"
            android:textColor="@color/primaryColor"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/taDOChooserDialogCancelButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dp"
            android:layout_marginLeft="@dimen/four_dp"
            android:layout_marginRight="@dimen/twenty_four"
            android:background="@drawable/button_selector"
            android:text="@string/tado_chooser_fragment_1_dialog_done"
            android:textColor="@color/primaryColor"
            style="?android:attr/borderlessButtonStyle"/>





    </LinearLayout>

</LinearLayout>

